k8s_kind/flag-service/flag-service-db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-flag-service
  namespace: flag-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-flag-service
  template:
    metadata:
      labels:
        app: db-flag-service
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            # - name: init-sql
            #   mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 1m
              memory: 50Mi
            limits:
              cpu: 10m
              memory: 250Mi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-flag-pvc
        # - name: init-sql
        #   configMap:
        #     name: flag-db-init
