k8s_kind/flag-service/flag-service-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-flag-service
  namespace: flag-ns
spec:
  type: ClusterIP
  selector:
    app: db-flag-service
  ports:
    - port: 5432
      targetPort: 5432
